SF-2586 Fix biblical terms dialog text overlap (#2362)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/biblical-terms/biblical-term-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/biblical-terms/biblical-term-dialog.component.scss
@@ -1,3 +1,5 @@
+@use 'src/xforge-common/media-breakpoints/breakpoints' as *;
+
 mat-dialog-actions {
   display: flex;
   place-content: flex-end;
@@ -7,4 +9,7 @@ mat-dialog-content {
   display: flex;
   flex-direction: column;
   row-gap: 1em;
+  @include media-breakpoint('<=', md) {
+    row-gap: 2em;
+  }
 }
